# fall-2025-lectures

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
final-project/: acquisition-scratch.ipynb  acquisition-slides.ipynb  acquisition.ipynb  description.md  plot-tracking.ipynb  track-kf.ipynb  tracking-kf.ipynb  tracking.ipynb
lecture-1-and-2/: soln.ipynb  soln.md
lecture-10/: correlation-and-acquisition.ipynb  slides.ipynb
lecture-11/: coherent-integration.ipynb  correlation-and-acquisition.ipynb  slides.ipynb
lecture-12/: soln.ipynb
lecture-13/: mslides.m  slides.ipynb
lecture-3/: soln.ipynb
lecture-5/: soln.ipynb
lecture-6/: soln.ipynb
lecture-7/: soln.ipynb
lecture-8/: extract-google-maps-rx-coords.ipynb  simulate-gps-signal.ipynb  slides.ipynb
lecture-9/: soln.ipynb
lecture-9-and-10/: soln.ipynb
lecture-9-and-11/: soln.ipynb
project-2_closed-loop-tracking/: project-2-plot.ipynb  project-2-track.ipynb
project-2_closed-loop-tracking/project_utils/: acquisition.py  correlator.py  gpsl1ca.py  sample_utils.py
utils/sample_processing/: bpsk_acquisition.py  correlation.py  kf_dynamics.ipynb  sample_streaming.py  tracking.py  tracking_kf.py  tracking_kf2.py
