[project]
name = "gnss-lectures"
version = "0.1.0"
description = "Solution sets to NG lecture set for Fall 2025"
authors = [
    {name = "Brian Breitsch",email = "brian.breitsch@colorado.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "utils"}]

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
