[project]
name = "gnss-lectures"
version = "0.1.0"
description = "Solution sets to NG lecture set for Fall 2025"
authors = [
    {name = "Brian Breitsch",email = "brian.breitsch@colorado.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gnss-tools @ ./submodules/gnss-tools"
]

[tool.poetry]
packages = [{include = "utils"}]

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
ipykernel = "^7.1.0"
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
